--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env 
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-*.cache
-hosting.*
+
+src/assets/test_data.js
