--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lottie-player": "^1.3.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
